--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ianvei/expressjs-tutorial#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2"
   },
   "devDependencies": {
