--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   "homepage": "https://github.com/ianvei/expressjs-tutorial#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
